<resources>
    <string name="app_name">S\'tudiant</string>

    <string name="etudiant_btn">Etudiant</string>
    <string name="particulier_btn">Particulier</string>
    <string name="validate_btn">Valider</string>


    <string name="title_activity_choose">ChooseActivity</string>
    <string name="title_text_activity_choose">Choisissez la catégorie de votre job</string>
    <string name="add_job"> Ajoutez votre demande</string>
    <string name="confirm_informations"> Confirmez vos informations</string>
    <string name="number_studiant_postulant"> %1$s étudiants ont postulé pour ce job</string>

    <string name="error_already_postule"> Vous avez déja postulé à ce job</string>

    <string name="profil_not_find"> Le profil n\'a pas été retrouvé</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_tel">Telephone</string>
    <string name="prompt_password_optional">Password (optional)</string>
    <string name="prompt_first_name">Prénom</string>
    <string name="prompt_description">Décrivez votre besoin</string>
    <string name="prompt_description_studiant">Décrivez vous en quelques mots</string>
    <string name="prompt_last_name">Nom</string>
    <string name="prompt_price">Prix</string>
    <string name="prompt_adress">Adresse</string>
    <string name="prompt_study">Etudes</string>
    <string name="action_sign_in">Valider</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="facebook_app_id">1924525284450671</string>
    <string name="google_place_api_key">AIzaSyCOPUSHLPBUJhXZkQ67bipQltjwT0EwqNQ</string>


    <!--
    FOLDING CELL
    -->

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="propose_par" translatable="false">PROPOSE PAR : </string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">POSTE PAR :</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="description_title" translatable="false">DESCRIPTION</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="date_title" translatable="false">DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="price_title" translatable="false">PRIX</string>
    <string name="deadline_time_mock" translatable="false">20 €</string>
    <string name="request_btn_text" translatable="false">POSTULER</string>
    <string name="content_from1_mock">DESCRIPTION DU JOB </string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="prompt_permis">Avez vous le permis</string>
    <string name="add_rib">Ajouter un RIB</string>
    <string name="get_money">Encaisser mon argent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="studiant_in">Etudiant en : </string>
    <string name="studiant">Etudiant</string>
    <string name="requests_choose_studiant">Choisir</string>
    <string name="permis">permis</string>
    <string name="postulant">Postulant</string>
    <string name="see_studiant">Voir les étudiants</string>
    <string name="studiant_code">S\'tudiant code</string>
    <string name="delete">Supprimer</string>
    <string name="get_message">Récupération des jobs</string>
    <string name="get_message_postulant">Postulation en cours</string>
    <string name="get_message_add_rib">Ajout en cours</string>
    <string name="get_message_wait">Merci de patienter</string>
    <string name="get_message_inscription_loading">Inscription en cours</string>
    <string name="get_message_password">Récupération du mot de passe</string>
    <string name="get_message_connexion">Connexion en cours</string>
    <string name="title_popin_main">Inscrivez-vous pour découvrir les offres disponibles ou les étudiants prêts à les réaliser</string>
    <string name="title_connexion">Choisissez votre moyen de connexion</string>
    <string name="title_profil">Confirmez vos informations</string>
    <string name="job_done">JOB TERMINE</string>
    <string name="iban">Iban</string>
    <string name="bic">Code BIC</string>
    <string name="nom_prenom">Nom Prenom</string>
    <string name="cp">Code postal</string>
    <string name="ville">Ville</string>

</resources>
