<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.studiant.com.presentation.ui.fragments.etudiant.AddRibFragment">




    <ImageView
        android:id="@+id/imageViewLogo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_full" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutIban"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/EditTextHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo3">

        <EditText
            android:id="@+id/editTextIban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/iban"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName|number"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/dark"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutBic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/EditTextHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutIban">

        <EditText
            android:id="@+id/editTextBic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bic"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text|textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/dark"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutNomPrenom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/EditTextHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutBic">

        <EditText
            android:id="@+id/editTextNomPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_prenom"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/dark"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutAdresse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/EditTextHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutNomPrenom">

        <EditText
            android:id="@+id/editTextAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_adress"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/dark"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutCp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/EditTextHint"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutAdresse">

        <EditText
            android:id="@+id/editTextCp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cp"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName|number"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/dark"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutVille"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/EditTextHint"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutAdresse">

        <EditText
            android:id="@+id/editTextVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ville"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/EditTextStyle"
            android:textColor="@color/dark"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/buttonValidateRib"
        style="@style/StyleButtonStudiant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/validate_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
